Inseridas modificações para gerar o grafico com o jfreechart, mas talvez devesse ser inicialiado logo no inicio.